--- a/packages/components/message/index.scss
+++ b/packages/components/message/index.scss
@@ -4,7 +4,7 @@
   padding: 15px 19px;
   transform: translateX(-50%);
   transition: all 0.5s;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
